--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: webpage
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: webpage
@@ -28,6 +29,7 @@ spec:
   - port: 8089
     targetPort: 80
   type: LoadBalancer
+
 
 
 
