--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webpage
-        image: fabricioveronez/pagina-exemplo:green
+        image: fabricioveronez/pagina-exemplo:blue
         ports:
         - containerPort: 80
 ---
@@ -29,6 +29,7 @@ spec:
   - port: 8089
     targetPort: 80
   type: LoadBalancer
+
 
 
 
